...

    var title: String {
        switch self {
        case .home:
            return "Home"
        case .library:
            return "Library"
        case .profile:
            return "Profile"
        }
    }

    var accessibilityTitle: String {
...
